--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
                         <ul>
                             <li><span>Project1</span><br>Creating Bihar Tourism Website.</li>
                             <li><span>Project2</span><br>Creating landing page of International Travel Agency.</li>
+                            <li><span>Project3</span><br>Making my own Portfolio.</li>
+                            <li><span>Project4</span><br>Creating E-commerce Website.</li>
                         </ul>
 
                     </div>
@@ -67,7 +69,9 @@
                         <ul>
                             <li><span>2019</span><br>Matriculation(CBSE)<br> in G D Mission Public School.</li>
                             <li><span>2019-2021</span><br>Intermediate(BSEB)<br> D B S D College.</li>
-                            <li><span>2021-2024</span><br>Patliputra University<br>J D Womens College BCA(3rd Year).</li>
+                            <li><span>2021-2024</span><br>Graduation(BCA)<br>J D Womens College.</li>
+                            <li><span>2024-2026</span><br>Masters(MCA)<br>LNMI Patna.</li>
+                           
                             
                         </ul>
 
@@ -99,6 +103,11 @@
             <div>
                 <h2>Project 3</h2>
                 <p>Making my own portfolio. Duration: one Week. Technologies Used: HTML, CSS & Java Script. This is my third computer project experience. </p>
+                <a herf="#">Learn more</a>
+            </div>
+                 <div>
+                <h2>Project 4</h2>
+                <p>Creating E-commerce Website. Duration: One Week. Technologies Used :HTML, CSS & JavaScript. This is my fouth computer project. I made this project as a task for Internship NazraSoft and this is my fourth computer project experience.</p>
                 <a herf="#">Learn more</a>
             </div>
 
